PHOEBE Project ChangeLog:
----------------------------------------------------------------------------

2004-10-28: - If .lco file readout fails on lines giving radii, uninitialized
              values were used in LC Plotting window. Now these values are
              initialized to -1.0 (so that the problem is obvious). Due to
              this bug PHOEBE was reported to crash. Thanks to Ethem Derman
              for pointing this out!
2004-10-21: - Array sizes in WD have been changed to accomodate for Nmax=60
              and 6000 observation points.
            - PHOEBE 0.26 released!
2004-10-12: - The underlaying WD version changed to 2004-09-17, which fixes
              a bug mentioned below. Things should now work well. After some
              testing, a new PHOEBE version will be released.
2004-09-06: - All tabs in phoebe_fortran_routines.f replaced with two spaces.
              This removes the inconsistency with some older FORTRAN compilers.
            - PHOEBE functions for creating LCI and DCI files updated to con-
              form to the new layout of WD version 2004-06-09.
            - A bug in lco data readout fixed. The values are now again repor-
              ted properly.
            - PHOEBE now works with the newest WD version. There is still a
              persistent bug present in WD that returns NANs for symmetrical
              derivatives. 0.26 will thus be postponed until this issue is
              resolved.
2004-07-24: - Simplex values (step size, min & max values) for log g and [M/H]
              were completely off. Since they were disabled anyway, this
              doesn't influence PHOEBE at all, but when converting keyword
              files from 0.2x to 0.3x versions, mayhem happens. Fixed.
2004-07-23: - After a successful CVS restauration, a new release is in order:
              PHOEBE 0.25 testing release is out!
2004-06-29: - A fitting quickbar typo (Origin of time -> Argument of peri-